welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:13: error: not found: value i
			setPos(0,i);
                                 ^Diagonal:27: error: not found: value i
			setPos(i,6);
                               ^