welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
	var x:Int = 0
	while (!(getY()==0)) {
		for (i <- 1 to 7) {
		
			ecritMessage(x);
			setPos(getX()+1,getY()-1);
			x=x+1;
		}
		if (getY()==0) {
			ecritMessage(x);
			setPos(0,i);
			x=x+1;
		}
	}
	setPos(1,6)
	ecritMessage(x);
	x=x+1;
	while (!(getX() == 6)) {
		for (i <- 2 to 6) {
			setPos(getX()+1,getY()-1);
			ecritMessage(x);
			x=x+1;
		}
		if (getX()==6) {
			setPos(i,6);
			ecritMessage(x);
			x=x+1;
		}
	}
}